# exy

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  config.json  filestructure.txt  pyproject.toml  tools.db
.github/workflows/: ci-cd.yml
adapters/: discord_adapter.py
script/: start.sh
src/: app.py  main.py
src/api/: router.py
src/core/: config.py
src/domain/db/: database.py
src/domain/ingress/: router.py  schema.py  security.py
src/domain/tools/: bootstrap.py  fedrated_registry.py  models.py  router.py
src/domain/tools/embedding/: embedding_providers.py
src/domain/tools/local/: local_registry.py  my_tools.py  register_local_tool.py
