[project]
name = "exy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"discord>=2.3.2",
	"fastapi>=0.111.0",
	"httpx>=0.28.1",
	"pydantic-ai>=1.105.0",
	"sentence-transformers>=5.6.0",
	"sqlite-vec>=0.1.9",
	"uvicorn>=0.30.0",
]
